--- a/TicTacToe/app/build.gradle
+++ b/TicTacToe/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.google.guava:guava:19.0'
+    compile 'com.squareup.picasso:picasso:2.4.0'
 }
